--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,29 @@ dependencies:
   geolocator: ^7.0.2
   google_maps_flutter: ^2.0.9
   image_picker: ^0.8.4+1
+  dio: ^4.0.6
+  firebase_database: ^9.0.7
+  firebase_auth: ^1.0.2
+  cloud_firestore: ^1.0.3
+  flutter_barcode_scanner: ^2.0.0
+  intl: ^0.17.0
+  video_player: ^2.2.3
+  connectivity_plus: ^2.1.0
+  flutter_slimy_card: ^1.0.2
+  curved_navigation_bar: ^1.0.3
+  cached_network_image: ^3.2.0
+  fancy_bottom_navigation: ^0.3.3
+  flutter_advanced_drawer: ^1.3.2
+  collapsible_sidebar: ^2.0.1+2
+  firebase_core: ^1.12.0
+  firebase_messaging: ^11.2.7
+
+dependency_overrides:
+  firebase_messaging_platform_interface: 3.1.6
 
 
 
 
-
-
-
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
